[package]
name = "drifter"
version = "0.1.0"
edition = "2021"
description = "A multiplayer drift racing game"
repository = "https://github.com/RasmusHogslatt/drifter"
license = "MIT"

[dependencies]
bevy = "0.15"
bevy_ggrs = { version = "0.17", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.11", features = ["ggrs"] }
bevy_rapier2d = { version = "0.29" }
wasm-bindgen = "0.2.100"
getrandom = { version = "0.2", features = ["js"] }

# Enable better optimizations for wasm
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Enable better optimization for dependencies
[profile.dev.package."*"]
opt-level = 2

# Configure the WASM file
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
